# GL_Project_DSDA

./: .gitignore  CMakeLists.txt  README.md  convert.py  lines.py  notes.md
CMakeUtils/: README.md  files_and_folders.cmake
assets/models/: collumn.mtl  cottage.mtl  domeGlass.mtl  foot.mtl  plane.mtl  shelve.mtl  ship.mtl  simpleCube.mtl  simpleCube2.mtl  statue.mtl  title.mtl
glimac/: CMakeLists.txt
glimac/glimac/: Animation.hpp  BasicProgram.hpp  Button.hpp  FPSCamera.hpp  Field.hpp  FreeflyCamera.hpp  Geometry.hpp  Instance.hpp  KeyCodes.hpp  Light.hpp  Link.hpp  Mirror.hpp  Particule.hpp  Scene.hpp  ShadowMap.hpp  TrackballCamera.hpp  VertexData.hpp  WindowManager.hpp  common.hpp  desktop.ini  getTime.hpp
glimac/src/: Geometry.cpp  Sphere.cpp  WindowManager.cpp  desktop.ini
src/: CMakeLists.txt  ex_main.cpp  ex_main_barebone.cpp
src/shaders/: 3D.vs.glsl  multiTex3D.fs.glsl  tex3D.fs.glsl
src/shaders/earth/: tex3D.vs.glsl
src/shaders/ground/: ground.fs.glsl  ground.vs.glsl
src/shaders/light/: light.fs.glsl
src/shaders/mirror/: mirror.fs.glsl
src/shaders/moon/: multiTex3D_copy.fs.glsl
src/shaders/roomOne/: ground.fs.glsl  ground.vs.glsl
src/shaders/skybox/: skybox_shader.fs copy.glsl  skybox_shader.fs.glsl  skybox_shader.vs copy.glsl  skybox_shader.vs.glsl
src/shaders/utils/: buttons.fs.glsl  buttons.vs.glsl  check_shadow.fs.glsl  check_shadow.vs.glsl  depth.fs.glsl  depth.vs.glsl  mirror.fs.glsl  mirror.vs.glsl  mirror_cutout.fs.glsl  mirror_cutout.vs.glsl  mirror_texture_test.fs.glsl  mirror_texture_test.vs.glsl  normal.fs.glsl  normal.vs.glsl  pattern.fs.glsl  pattern.vs.glsl  shadow.fs.glsl  shadow.vs.glsl  simple_depth.fs.glsl  voronoi.fs.glsl  voronoi.vs.glsl  white.fs.glsl  white.vs.glsl
